--- a/style.css
+++ b/style.css
@@ -77,3 +77,44 @@ h1, h2 {
     margin: 0;
     padding: 20px;
 }
+
+
+#myHeader {
+    position: fixed;
+    top: -100px; /* initially hide the header */
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: right;
+    transition: top 0.3s;
+    z-index: 1000; /* A high value to ensure it's on top */
+
+}
+
+#myHeader.visible {
+    top: 0; /* show the header */
+}
+
+#myHeader nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: right; 
+}
+
+#myHeader nav ul li {
+    display: inline-block; 
+}
+
+#myHeader nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#myHeader nav ul li a:hover {
+    background-color: #111;
+}
